# SGBuild

./: .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  animation.cpp  animation.h  animation_frame.cpp  animation_frame.h  controller.cpp  controller.h  element.cpp  element.h  image.cpp  image.h  main.cpp  saveandloadmanager.cpp  saveandloadmanager.h  stringutil.h  view.cpp  view.h
src/graphics/: CMakeLists.txt  error.h  include.h  mainrenderer.cpp  mainrenderer.h  texturemanager.cpp  texturemanager.h
src/math/: math.h  vec2.h  vec3.h
